--- a/PzProject/View/MainPage.xaml
+++ b/PzProject/View/MainPage.xaml
@@ -2,10 +2,11 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="clr-namespace:PzProject"
+
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:designTime="clr-namespace:PzProject.ViewModel"
       mc:Ignorable="d"
-      d:DesignHeight="400" d:DesignWidth="600"
+      d:DesignHeight="360" d:DesignWidth="1000"
       Title="MainPage">
 
     <Page.Resources>
@@ -14,9 +15,10 @@
             <Border Margin="0">
                 <Grid Background="CornflowerBlue">
                     <StackPanel>
-                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
-                        <TextBlock Text="{Binding Description}" VerticalAlignment="Center" />
-                        <TextBlock Text="{Binding Length}" VerticalAlignment="Center" />
+                        <Image MinWidth="100" MaxHeight="200" Source="{Binding ImageSrc, Converter={ StaticResource ImageConverter}}"/>
+                        <TextBlock Text="{Binding Name, FallbackValue='movie name'}" />
+                        <TextBlock Text="{Binding Description, FallbackValue='description'}" />
+                        <TextBlock Text="{Binding Length, FallbackValue='length'}" />
                     </StackPanel>
                 </Grid>
             </Border>
@@ -24,17 +26,17 @@
 
     </Page.Resources>
     <Grid Background="Coral">
-        
+
         <ListView x:Name="listView"
                   HorizontalAlignment="Left"
-                  Height="380"
+                  Height="340"
                   Margin="10,10,0,0"
                   VerticalAlignment="Top"
-                  Width="580" 
+                  Width="980" 
                   ItemTemplate="{StaticResource MovieItemDataTemplate}"
                   ItemsSource="{Binding MovieList}"
         />
-        
+
     </Grid>
 </Page>
 
