--- a/PzProject/App.xaml
+++ b/PzProject/App.xaml
@@ -16,8 +16,11 @@
                 
                 <ResourceDictionary Source="Resources/Converters.xaml" />
                 <ResourceDictionary Source="Resources/mock_movie_img.xaml" />
-                
-                
+
+                <ResourceDictionary Source="Resources/Style.xaml" />
+                <ResourceDictionary Source="View/Template/MovieItemDataTemplate.xaml"/>
+
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
