--- a/PzProject/View/MainPage.xaml
+++ b/PzProject/View/MainPage.xaml
@@ -23,71 +23,53 @@
                    VerticalAlignment="Center"
                    Grid.Row="0"/>
 
-        <TabControl Grid.Row="1" 
-                    Padding="10">
+        <TabControl Grid.Row="1"
+                    Margin="10" 
+                    BorderBrush="Gainsboro">
             
-            <TabItem Header="1" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="1">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="2" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="2">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="3" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="3">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="4" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="4">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="5" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="5">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="6" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="6">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
 
-            <TabItem Header="7" 
-                     Background="Gray" 
-                     Margin="2">
+            <TabItem Header="7">
                 <ListView
-                    Margin="10"
                     ItemTemplate="{StaticResource MovieItemDataTemplate}"
                     ItemsSource="{Binding MovieList}"/>
             </TabItem>
+
+            <TabItem Header="test"/>
 
         </TabControl>
     </Grid>
