--- a/PzProject/View/Template/MovieItemDataTemplate.xaml
+++ b/PzProject/View/Template/MovieItemDataTemplate.xaml
@@ -6,7 +6,7 @@
         <Border Padding="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.4*"/>
+                    <ColumnDefinition Width="0.4*" MinWidth="250"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
@@ -16,9 +16,13 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Image Source="{Binding ImageSrc, Converter={StaticResource ImageConverter}}" Width="150" Margin="5" Grid.Column="0"/>
+                    <Image Source="{Binding ImageSrc, Converter={StaticResource ImageConverter}}" 
+                           Width="150" 
+                           Margin="5" 
+                           Grid.Column="0"/>
                     <StackPanel Grid.Column="1">
-                        <TextBlock Text="{Binding Name, FallbackValue='movie name'}" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding Name, FallbackValue='movie name'}" 
+                                   FontWeight="Bold"/>
                         <TextBlock Text="{Binding Length, FallbackValue='length'}"/>
                     </StackPanel>
                 </Grid>
@@ -30,9 +34,15 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     
-                    <TextBlock Text="10:00" Grid.Column="0" Background="LightGray" TextAlignment="Center"/>
-                    <TextBlock Text="15:00" Grid.Column="1" Background="White" TextAlignment="Center"/>
-                    <TextBlock Text="20:00" Grid.Column="2" Background="LightGray" TextAlignment="Center"/>
+                    <TextBlock Text="10:00" Grid.Column="0" 
+                               Background="LightGray" 
+                               TextAlignment="Center"/>
+                    <TextBlock Text="15:00" Grid.Column="1" 
+                               Background="White" 
+                               TextAlignment="Center"/>
+                    <TextBlock Text="20:00" Grid.Column="2" 
+                               Background="LightGray" 
+                               TextAlignment="Center"/>
 
                 </Grid>
 
