--- a/PzProject/View/Template/MovieItemDataTemplate.xaml
+++ b/PzProject/View/Template/MovieItemDataTemplate.xaml
@@ -6,7 +6,7 @@
         <Border Padding="5">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.4*" MinWidth="200"/>
+                    <ColumnDefinition Width="0.4*" MinWidth="250"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
@@ -17,7 +17,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Image Source="{Binding ImageSrc, Converter={StaticResource ImageConverter}}" 
-                           Height="100"
+                           Width="150" 
                            Margin="5" 
                            Grid.Column="0"/>
                     <StackPanel Grid.Column="1">
@@ -36,15 +36,12 @@
                     
                     <TextBlock Text="10:00" Grid.Column="0" 
                                Background="LightGray" 
-                               TextAlignment="Center"
-                               Padding="0 50 0 0"/>
+                               TextAlignment="Center"/>
                     <TextBlock Text="15:00" Grid.Column="1" 
                                Background="White" 
-                               Padding="0 50 0 0"
                                TextAlignment="Center"/>
                     <TextBlock Text="20:00" Grid.Column="2" 
                                Background="LightGray" 
-                                Padding="0 50 0 0"                              
                                TextAlignment="Center"/>
 
                 </Grid>
