--- a/PzProject/View/RoomPage.xaml
+++ b/PzProject/View/RoomPage.xaml
@@ -5,10 +5,51 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PzProject.View"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="360" d:DesignWidth="1000"
       Title="RoomPage">
 
-    <Grid>
+    <Grid Background="LightGray">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Wybor miejsca" 
+                   FontSize="20" 
+                   FontWeight="Bold" 
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Grid.Row="0"/>
+        
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="0.2*"/>
+            </Grid.RowDefinitions>
+
+            <ContentPresenter Grid.Row="0"
+                              Margin="10"
+                              HorizontalAlignment="Center"
+                              x:Name="Sala">
+            </ContentPresenter>
+            
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                
+                <Button Grid.Column="0" 
+                        Content="Rezerwuj"
+                        FontSize="19"
+                        Margin="150 10 10 10"/>
+                <Button Grid.Column="1" 
+                        Content="Kup Bilet"
+                        FontSize="19"
+                        Margin="10 10 150 10"/>
+            </Grid>
+            
+        </Grid>
         
     </Grid>
 </Page>
