--- a/PzProject/View/MainPage.xaml
+++ b/PzProject/View/MainPage.xaml
@@ -25,20 +25,28 @@
         </DataTemplate>
 
     </Page.Resources>
-    <Grid Background="Coral">
-
-        <ListView x:Name="listView"
-                  HorizontalAlignment="Left"
-                  Height="340"
-                  Margin="10,10,0,0"
-                  VerticalAlignment="Top"
-                  Width="860" 
-                  ItemTemplate="{StaticResource MovieItemDataTemplate}"
-                  ItemsSource="{Binding MovieList}"
-        />
-
-        <Button x:Name="button" Content="Button" Command="{Binding HaloClick}" HorizontalAlignment="Left" Margin="891,160,0,0" VerticalAlignment="Top" Width="75"/>
-
+    <Grid Background="#99C">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="148" Margin="72,51,0,0" VerticalAlignment="Top" Width="525" SelectionChanged="tabControl_SelectionChanged">
+            <TabItem Header="Poniedziałek">
+                <Grid Background="#FFE5E5E5" Margin="0,0,0,-71">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="158*"/>
+                        <ColumnDefinition Width="108*"/>
+                        <ColumnDefinition Width="251*"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Wtorek" HorizontalAlignment="Right" Width="98" Margin="0,0,-14,0">
+                <Grid Background="#FFE5E5E5" Margin="-44,29,-8,-115" Height="250" VerticalAlignment="Top" RenderTransformOrigin="0.591,0.462">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="177*"/>
+                        <ColumnDefinition Width="27"/>
+                        <ColumnDefinition Width="365*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="2" HorizontalAlignment="Left" Height="100" Margin="60.909,121,0,0" VerticalAlignment="Top" Width="100"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Page>
 
