Test nowego widoku MainPaga + "czytelniejszy kod"

--- a/PzProject/MainWindow.xaml
+++ b/PzProject/MainWindow.xaml
@@ -15,7 +15,9 @@
     WindowTransitionsEnabled="False"
     mc:Ignorable="d">
 
-    <Frame x:Name="MainFrame" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden" />
+    <Frame x:Name="MainFrame" 
+           VerticalAlignment="Stretch" 
+           NavigationUIVisibility="Hidden" />
 
 </Controls:MetroWindow>
 
