--- a/PzProject/Resources/Style.xaml
+++ b/PzProject/Resources/Style.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:PzProject.Resources">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style x:Key="ButtonTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Background" Value="Pink" />
+    </Style>
+
 
     <Style TargetType="TabItem">
         <Setter Property="Template">
@@ -24,10 +28,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
-
-    <Style x:Name="Tytul" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="Comic Sans MS"/>
     </Style>
 
 </ResourceDictionary>
