--- a/PzProject/View/RoomPage.xaml
+++ b/PzProject/View/RoomPage.xaml
@@ -51,7 +51,8 @@
                 <Button Grid.Column="0"
                         Content="Rezerwuj"
                         FontSize="19"
-                        Margin="150 10 10 10" />
+                        Margin="150 10 10 10" 
+                        Command="{Binding BookingCommand}"/>
                 <Button Grid.Column="1"
                         Content="Kup Bilet"
                         FontSize="19"
